--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-02-22 23:33+0100\n"
+"POT-Creation-Date: 2019-02-23 09:19+0100\n"
 "PO-Revision-Date: 2018-11-27 22:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -1809,8 +1809,7 @@ msgstr "Softvérový developer a expert na blockchain"
 msgid ""
 "Contributor of CPython, #fellow member of the PSF, EuroPython, AFPy and "
 "freelancer."
-msgstr ""
-"Prispievateľ do CPython, člen PSF, EuroPython, AFPy a freelancer."
+msgstr "Prispievateľ do CPython, člen PSF, EuroPython, AFPy a freelancer."
 
 #: templates/index.html:651 templates/speakers.html:1268
 msgid "Test Lead"
@@ -1831,6 +1830,22 @@ msgstr "Python developer v booking.com"
 #: templates/index.html:694 templates/speakers.html:1456
 msgid "Python & DevOps Engineer from Prague"
 msgstr "Python & DevOps Engineer"
+
+#: templates/index.html:704 templates/speakers.html:1482
+msgid "Python Engineer at Kiwi"
+msgstr "Python vývojár v Kiwi"
+
+#: templates/index.html:717
+msgid "Mozilla Tech Speaker"
+msgstr "Technický spíker v Mozille"
+
+#: templates/index.html:727 templates/speakers.html:1581
+msgid "Python backend developer"
+msgstr "Python backend developer"
+
+#: templates/index.html:737
+msgid "SysAdmin Team Lead at Exponea"
+msgstr "SysAdmin Team Lead v Exponea"
 
 #: templates/job-fair.html:8
 msgid "Job fair"
@@ -2577,8 +2592,8 @@ msgid ""
 "world."
 msgstr ""
 "Prispievateľ do CPythonu, člen tímu EuroPython od roku 2015. Rád si "
-"zdokonaľuje svoje zručnosti s najlepšími postupmi , TDD, CI, atď. "
-"Python developer od roku 2001 a člen PSF, EuroPython a AFPy, je taktiež "
+"zdokonaľuje svoje zručnosti s najlepšími postupmi , TDD, CI, atď. Python "
+"developer od roku 2001 a člen PSF, EuroPython a AFPy, je taktiež "
 "freelancer v úžasnom svete Pythonu."
 
 #: templates/speakers.html:248
@@ -3608,6 +3623,124 @@ msgid ""
 "Ocean."
 msgstr ""
 
+#: templates/speakers.html:1491
+msgid ""
+"Python engineer at Kiwi.com focusing on finance apps. I am a developer "
+"who likes to break stuff and then put it back together which then works "
+"even better. I am always keen to share my knowledge and learn from "
+"others."
+msgstr ""
+"Python vývojár v Kiwi.com zameraný na finančné aplikácie. Som developer,"
+" ktorý rád rozbíja veci a potom ich dáva dohromady, aby fungovali ešte "
+"lepšie. Vždy sa rád podelím o svoje znalosti a poučím sa od ostatných."
+
+#: templates/speakers.html:1497
+msgid "The dos and don'ts of task queues"
+msgstr ""
+
+#: templates/speakers.html:1498
+msgid ""
+"Let's talk about our experience with Celery and intentions to switch to "
+"RQ which failed. We'll show our setup of larger and more complex apps "
+"than the ones presented in doc examples together with some useful tips "
+"and tricks and how-tos on orchestrating such apps for thousands of tasks "
+"a day."
+msgstr ""
+
+#: templates/speakers.html:1502
+msgid ""
+"At Kiwi.com we heavily rely on task queues and asynchronous execution of "
+"code to process large amounts of requests coming to our back-ends. With "
+"the separation of our codebase to microservices, we can quickly try new "
+"tools and different approaches to process these large volumes of "
+"requests. The microservice we'll be talking about is making unreliable "
+"slow 3rd party services reliable and asynchronous with a bit of business "
+"logic sprinkled on top of it. We’ll tell a failure story of ours but "
+"resulting in a valuable lesson."
+msgstr ""
+
+#: templates/speakers.html:1510
+msgid ""
+"Most of our services use Celery and it's the go-to tool for new services "
+"as well but we wanted to be different with this new microservice. RQ is "
+"the next best choice for task queues and it is presented as simpler and "
+"more straightforward than Celery. That can definitely be true but after 3"
+" weeks of research, development and struggling we found out the "
+"unpleasant truth about being simple and making the right choices. We "
+"won't talk about comparing the frameworks but rather about the approach "
+"on how to experiment with new things in your environment. After that, "
+"we'll present our current setup which can take upon any number of tasks. "
+"How we orchestrate the app and continuously integrate and deploy and what"
+" fun things await ahead of us in the development."
+msgstr ""
+
+#: templates/speakers.html:1538
+msgid "Mozilla Tech Speaker, Developer by day, Hacker by night"
+msgstr "Technický spíker z Mozilly, cez deň developer, v noci hacker"
+
+#: templates/speakers.html:1547
+msgid ""
+"Kalyan Dikshit is a Mozilla Tech Speaker, Representative, and part of its"
+" Hyderabad Community, India. He spoke at the Internet Freedom Festival "
+"2017, 2018, Still Hacking Anyway (SHA), All Systems Go! 2017, Shift DEV "
+"2018. He recently gave a talk at “Full Stack Fest 2018” happened in "
+"Barcelona. As a volunteer he localizes software for Mozilla, Tor, Orfox, "
+"Orbot, GlobaLeaks, Briar and OONIProbe. He currently also devotes his "
+"time with ICRISAT where he works, with drones to develop and trial "
+"techniques, to connect farmers. Founder of the “JAVA 1.X Hyderabad "
+"Chapter” & Co-founder of “Duck Duck Go Hyderabad Chapter”. «Developer by "
+"Day, Hacker by Night»"
+msgstr ""
+"Kalyan Dikshit je technický spíker z Mozilly, predstaviteľ a člen "
+"hyderabadskej komunity v Indii. Prednášal na Internet Freedom Festivale "
+"v rokoch 2017 a 2018, Still Hacking Anyway (SHA), All Systems Go! 2017, "
+"Shift DEV 2018. Nedávno prednášal na “Full Stack Fest 2018” v Barcelone. "
+"Ako dobrovoľník lokalizoval softvér pre Mozillu, Tor, Orfox, Orbot, "
+"GlobaLeaks, Briar a OONIProbe. Aktuálne venuje svoj čas do ICRISAT, kde "
+"pracuje s dronmi a vyvíja techniky na prepojenie farmárov. Zakladateľ "
+"\"JAVA 1.X Hyderabad Chapter\" a spoluzakladateľ \"Duck Duck Go Hyderabad"
+" Chapter\". «Cez deň developer, v noci hacker»"
+
+#: templates/speakers.html:1559
+msgid "Smart Homes + Tor = SSH [Secure Smart Home]"
+msgstr ""
+
+#: templates/speakers.html:1560
+msgid ""
+"“Internet of Things,” “Smart Devices,” “Smart Homes.” people are "
+"fascinated with them and their usage. But the most important things they "
+"tend to forget are “Security & Privacy”. Using Tor to divert prying eyes "
+"away from our connected homes."
+msgstr ""
+
+#: templates/speakers.html:1590
+msgid ""
+"Developer with 10 years of experience with backend systems. Created them "
+"from scratch by starting with analysis and writing specification up to "
+"deployment on production. Big fan and evangelist of continuous learning, "
+"organizer of coding dojo sessions."
+msgstr ""
+"Developer s 10-ročnými skúsenosťami s backend systémami. Vytváral ich "
+"na zelenej lúke od analýzy a písanie špecifikácií až po nasadenie do "
+"produkcie. Veľký fanúšik a evanjelista neustáleho učenia, organizátor "
+"Coding dojo stretnutí."
+
+#: templates/speakers.html:1597
+msgid "Long term IT projects"
+msgstr ""
+
+#: templates/speakers.html:1598
+msgid ""
+"Not everybody has a chance to work on new project from scratch. Everybody"
+" has some ideas what to do for such a project so it'll be a good one "
+"instead of legacy in a near future. During this talk I want to share my "
+"experience and show what works for me. I'll start from project analysis "
+"and end on deployment and beyond. I want to discuss some common mistakes "
+"and misconceptions and hopefully give you some ideas you could use for "
+"your own project regardless of its size. With a bit of work some/all "
+"could be applied to legacy projects as well."
+msgstr ""
+
 #: templates/sponsoring.html:8 templates/sponsoring.html:18
 msgid "Sponsors &amp; Partners"
 msgstr "Sponzori a partneri"
@@ -4555,30 +4688,6 @@ msgstr ""
 #~ " a zabavíme sa. Na túto udalosť "
 #~ "však budeš potrebovať samostatný lístok."
 
-#~ msgid "News"
-#~ msgstr "Novinky"
-
-#~ msgid ""
-#~ "We'll review the proposals as soon "
-#~ "as possible and publish all of the"
-#~ " speakers."
-#~ msgstr ""
-
-#~ msgid "PyCon SK 2019 speakers and website redesign."
-#~ msgstr "Spíkri na PyCon SK 2019 a redizajn webstránky"
-
-#~ msgid "It is our privilege to announce first three speakers at PyCon SK 2019:"
-#~ msgstr "Je nám cťou ohlásiť prvých troch spíkrov na PyCon SK 2019:"
-
-#~ msgid ""
-#~ "Helen Li from Google, prof. Juraj "
-#~ "Hromkovič from ETH Zürich and Honza "
-#~ "Král from Elastic."
-#~ msgstr ""
-#~ "Helen Li z Google, prof. Juraj "
-#~ "Hromkovič z ETH Zürich a Honza "
-#~ "Král z Elasticu."
-
 #~ msgid ""
 #~ "We have also launched new design "
 #~ "of the conference website. How do "
@@ -4588,15 +4697,6 @@ msgstr ""
 #~ "Spustili sme nový dizajn konferenčnej "
 #~ "web stránky. Ako sa ti páči? Daj"
 #~ " nám vedieť na sociálnych sieťach."
-
-#~ msgid "PyCon SK 2019 Slack channel & Social media"
-#~ msgstr "PyCon SK 2019 Slack kanál & sociálne médiá"
-
-#~ msgid "Join us at our social media:"
-#~ msgstr "Pridaj sa k nám na sociálnych sieťach:"
-
-#~ msgid "Conference ticket sale is open."
-#~ msgstr "Predaj lístkov na konferenciu je otvorený."
 
 #~ msgid ""
 #~ "Submit your talk proposal with short "
@@ -4609,23 +4709,3 @@ msgstr ""
 #~ "rečníci majú vstup na konferenciu "
 #~ "zadarmo."
 
-#~ msgid "Awesome Speakers"
-#~ msgstr "Úžasní rečníci"
-
-#~ msgid "Listen, Learn, Get inspired."
-#~ msgstr "Počúvaj, uč sa a inšpiruj sa"
-
-#~ msgid "Security Engineer"
-#~ msgstr "Bezpečnostný inžinier"
-
-#~ msgid "Tech Lead at Kiwi.com"
-#~ msgstr "Vedúci technológií v kiwi.com"
-
-#~ msgid "Senior Software Architect"
-#~ msgstr "Senior softvérový architekt"
-
-#~ msgid "Software Engineer"
-#~ msgstr "Softvérový inžinier"
-
-#~ msgid "Software Engineer and FOSS maintainer"
-#~ msgstr "Softvérový inžinier a prispievateľ do Open Source softvéru"
